<resources>
    <string name="app_name">Farm Doctor</string>
    <string name="apple_scab_description">\t\t\tPenyakit serius pada apel, Apple Scab (keropeng apel) (Venturia inaequalis) menyerang daun dan buah. Penyakit jamur membentuk bintik kuning pucat atau hijau zaitun pada permukaan atas daun. Bintik-bintik gelap seperti beludru dapat muncul di permukaan bawah. Daun yang terinfeksi parah menjadi bengkok dan mengerut dan mungkin rontok di awal musim panas.\n
        \t\t\tGejala pada buah mirip dengan yang ditemukan pada daun. Bintik-bintik keropeng tampak cekung dan cokelat serta mungkin memiliki spora beludru di tengahnya. Saat bintik-bintik ini matang, mereka menjadi lebih besar dan berubah menjadi coklat dan kusam. Buah yang terinfeksi menjadi terdistorsi dan dapat retak memungkinkan masuknya organisme sekunder. Buah yang terkena dampak parah bisa jatuh, terutama saat muda.\n
        \t\t\tKeropeng apel menutupi musim dingin terutama di daun-daun yang gugur dan di tanah. Perkembangan penyakit disukai oleh cuaca basah dan sejuk yang umumnya terjadi pada musim semi dan awal musim panas. Spora jamur terbawa angin, hujan atau percikan air dari tanah ke bunga, daun atau buah. Selama periode lembab atau hujan, daun apel yang baru dibuka sangat rentan terhadap infeksi. Semakin lama daun tetap basah, infeksi akan semakin parah. Keropeng apel menyebar dengan cepat antara 55-75 °F.</string>
    <string name="apple_scab_treatment1">Menyapu di bawah pohon dan menghancurkan daun yang terinfeksi untuk mengurangi jumlah spora jamur yang tersedia untuk memulai siklus penyakit lagi musim semi berikutnya.</string>
    <string name="apple_scab_treatment2">Siram di sore atau pagi hari (hindari irigasi di atas kepala) untuk memberi waktu daun mengering sebelum infeksi dapat terjadi.</string>
    <string name="apple_scab_treatment3">Sebarkan 3 hingga 6 inci lapisan kompos di bawah pohon, jauhkan dari batang, untuk menutupi tanah dan mencegah percikan spora jamur.</string>
    <string name="apple_scab_treatment4">Untuk kontrol terbaik, semprotkan sabun copper cair lebih awal, dua minggu sebelum gejala biasanya muncul. Sebagai alternatif, mulai aplikasikan ketika penyakit pertama kali muncul, dan ulangi dengan interval 7 hingga 10 hari hingga mekar.</string>
    <string name="apple_scab_treatment5">Fungisida Tanaman Belerang Bonide®, bubuk basah yang dapat dibasahi, digunakan dalam sebelum mekar dan harus digunakan sebelum musim hujan atau pelepasan spora. Oleskan dari pra-merah muda melalui penutup (2 sdm / galon air), atau gunakan dalam semprotan penutup hingga hari panen.</string>
    <string name="corn_common_rust_description">\t\t\tCommon Rust (Daun Coklat) disebabkan oleh jamur Puccinia sorghi dan terjadi setiap musim tanam. Jarang menjadi perhatian pada jagung hibrida. Pustula coklat biasanya pertama kali muncul pada akhir Juni. Gejala awal timbulnya daun coklat yang umum adalah bercak klorotik pada permukaan daun. Ini segera berkembang menjadi pustula, berwarna merah bata bubuk saat spora menembus permukaan daun. Pustula berbentuk oval atau memanjang, panjangnya sekitar 1/8 inci, dan tersebar jarang atau berkelompok. Jaringan daun di sekitar pustula bisa menjadi kuning atau mati, meninggalkan lesi pada jaringan mati. Lesi terkadang membentuk pita di seluruh daun dan seluruh daun akan mati jika terinfeksi parah. Seiring bertambahnya usia pustula, spora merah berubah menjadi hitam, sehingga pustula tampak hitam, dan terus meletus melalui permukaan daun. Sekam, kelopak daun, dan tangkai juga dapat terinfeksi.</string>
    <string name="corn_common_rust_management1">Penggunaan hibrida tahan adalah strategi manajemen utama untuk pengendalian common rust.</string>
    <string name="corn_common_rust_management2">Penanaman jagung tepat waktu di awal musim tanam dapat membantu menghindari tingkat inokulum yang tinggi atau kondisi lingkungan yang akan mendorong perkembangan penyakit.</string>
    <string name="strawberry_leaf_scroch_description">\t\t\tDaun strawberry yang hangus (scorch) disebabkan oleh infeksi jamur yang menyerang daun tanaman strawberry. Jamur yang bertanggung jawab disebut Diplocarpon earliana. Stroberi dengan daun hangus mungkin pertama kali menunjukkan tanda-tanda masalah dengan perkembangan noda keunguan kecil yang terjadi di bagian atas daun. Seiring waktu, bintik-bintik itu akan terus membesar dan menjadi gelap. Dalam kasus yang parah, bintik hitam bahkan dapat menutupi seluruh bagian daun tanaman stroberi dan menyebabkannya benar-benar kering dan jatuh dari tanaman. Meskipun dedaunan tanaman yang terinfeksi tidak menyenangkan secara estetika, kehadiran jamur ini jarang mempengaruhi kualitas tanaman stroberi itu sendiri.</string>
    <string name="strawberry_leaf_scroch_treatment1">Karena jamur ini patogen pada musim dingin pada daun tanaman yang terinfeksi, sanitasi taman yang tepat adalah kuncinya. Ini termasuk pembuangan sisa-sisa taman yang terinfeksi dari tambalan stroberi, serta seringnya transplantasi stroberi baru. Pembuatan penanaman baru dan tambalan stroberi adalah kunci untuk mempertahankan panen stroberi yang konsisten, karena tanaman yang lebih tua lebih cenderung menunjukkan tanda-tanda infeksi parah.</string>
    <string name="strawberry_leaf_scroch_treatment2">Saat melakukan penanaman baru, selalu pastikan bahwa praktik penanaman yang baik diterapkan. Praktik-praktik ini termasuk penggunaan jarak tanam yang tepat untuk memberikan sirkulasi udara yang memadai, dan penggunaan irigasi tetes. Menghindari tanah yang tergenang air dan sering membersihkan taman akan membantu mengurangi kemungkinan penyebaran jamur ini.</string>
    <string name="tomato_late_blight_description">\t\t\tPada daun muncul bercak cokelat dengan tepi berwarna kuning. Di bagian bawah bercak akan terlihat adanya lapisan putih seperti beludru. Bercak ini kemudian meluas ke seluruh daun. Penyakit ini disebabkan oleh jamur Phytophthora infestan. Penyebarannya sangat aktif di musim hujan, terutama pada suhu lingkungan 18-20°C dan kelembapan 91-100%.</string>
    <string name="tomato_late_blight_treatment1">Kultivar tahan tanaman jika tersedia.</string>
    <string name="tomato_late_blight_treatment2">Pindahkan sukarelawan dari kebun sebelum menanam dan beri jarak tanaman yang cukup jauh untuk memungkinkan banyak sirkulasi udara.</string>
    <string name="tomato_late_blight_treatment3">Siram di pagi hari, atau gunakan selang basah, untuk memberi waktu tanaman mengering di siang hari - hindari irigasi di atas kepala.</string>
    <string name="tomato_late_blight_treatment4">Hancurkan semua sisa tomat dan kentang setelah panen (lihat Pembersihan Taman Musim Gugur).</string>
    <string name="tomato_mosaic_virus_description">\t\t\tGejala infeksi virus dapat muncul sebagai bercak daun hijau terang dan gelap. Tobacco mosaic virus (TMV) menyebabkan bercak daun yang lebih tua dan dapat menyebabkan malformasi selebaran, yang dapat berbentuk seperti tali sepatu. Virus ini sangat menular dan mudah ditularkan dengan cara memasukkan sedikit getah dari tanaman yang terinfeksi ke tanaman sehat.</string>
    <string name="tomato_mosaic_virus_treatment1">Tidak ada obat untuk penyakit virus seperti mozaik setelah tanaman terinfeksi. Oleh karena itu, segala upaya harus dilakukan untuk mencegah penyakit memasuki taman Anda.</string>
    <string name="tomato_mosaic_virus_treatment2">Fungisida TIDAK akan mengobati penyakit virus ini.</string>
    <string name="tomato_mosaic_virus_treatment3">Varietas tahan tanaman bila tersedia atau beli transplantasi dari sumber yang memiliki reputasi baik.</string>
    <string name="tomato_spider_mites_description">\t\t\tTwo Spotted Spider Mite adalah spesies tungau paling umum yang menyerang tanaman sayuran dan buah-buahan di New England. Tungau sering membuat permukaan daun atas tampak berbintik-bintik atau berbintik-bintik. Daun kemudian menguning dan jatuh. Populasi besar menghasilkan anyaman yang terlihat dapat menutupi daun. Biasanya penyakit ini muncul ketika cuaca kering yang panas.</string>
    <string name="tomato_spider_mites_management1">Sirami tanaman tomat secara teratur dan jangan biarkan tanah menjadi kering tulang. Sirami area sekitarnya karena tungau tumbuh subur dalam kondisi panas, kering, dan berdebu.</string>
    <string name="tomato_spider_mites_management2">Arahkan aliran air yang kuat ke daun yang terkena segera setelah Anda melihat adanya tungau pada daun dan ulangi setidaknya dua kali setiap minggu. Seringkali, air mengeluarkan tungau dan mencegah infestasi yang parah.</string>
    <string name="tomato_spider_mites_management3">Singkirkan jaring dari daun tomat dengan kain lembab. Menghilangkan jaring akan menghilangkan penutup pelindung dan mencegah tungau bertelur.</string>
    <string name="tomato_spider_mites_management4">Hindari penggunaan pestisida, yang membunuh kumbang betina dan predator menguntungkan lainnya yang secara efektif mengendalikan tungau. Pestisida sering kali memperburuk masalah karena tungau, yang berkembang biak dengan cepat, segera kebal terhadap bahan kimia beracun. Tanpa serangga yang menguntungkan, tungau berkembang biak tanpa batasan.</string>
    <string name="tomato_spider_mites_management5">Semprot tanaman tomat dengan minyak hortikultura, yang membasmi tungau. Oleskan minyak hanya jika serangga yang menguntungkan tidak ada di tanaman dan jangan menyemprot pada hari yang berangin saat minyak dapat melayang dan membunuh serangga yang menguntungkan. Campurkan minyak dengan takaran 2,5 hingga 5 sendok makan per 1 galon air, tergantung pada tingkat keparahan masalahnya. Oleskan kembali semprotan setelah 30 hari.</string>
    <string name="tomato_spider_mites_management6">Gunakan semprotan sabun insektisida sebagai alternatif minyak hortikultura. Gunakan produk komersial yang telah dicampur sebelumnya karena semprotan buatan sendiri sering kali terlalu keras dan dapat merusak tanaman tomat. Jika menggunakan konsentrat, campurkan larutan dengan kecepatan 1 hingga 4 sendok teh per satu liter air. Semprot tanaman tomat setiap empat hingga tujuh hari, karena sabun insektisida hanya membunuh saat bersentuhan dan tidak memiliki efek residu. Jangan menyemprot saat matahari langsung menyinari dedaunan.</string>
    <string name="tomato_spider_mites_management7">Buang tanaman tomat yang terinfeksi serius dan mulai segar dengan tanaman baru yang tahan hama. Buang tanaman yang terserang dan jangan pernah menempatkan tanaman di tumpukan kompos.</string>
    <string name="tomato_mosaic_virus_treatment4">Jangan menyimpan benih dari tanaman yang terinfeksi.</string>
    <string name="tomato_mosaic_virus_treatment5">Obati di tempat dengan produk pengendalian hama alami yang paling tidak beracun, seperti Sabun Lebih Aman, Bon-Neem dan tanah diatom, untuk mengurangi jumlah serangga pembawa penyakit.</string>
    <string name="tomato_mosaic_virus_treatment6">Hapus semua gulma abadi, menggunakan herbisida paling tidak beracun, dalam jarak 100 yard dari petak kebun Anda.</string>
    <string name="tomato_mosaic_virus_treatment7">Virus dapat menyebar melalui aktivitas manusia, alat dan perlengkapannya. Sering-seringlah mencuci tangan dan mendisinfeksi peralatan berkebun, pancang, dasi, pot, bangku rumah kaca, dll. (Satu bagian pemutih menjadi 4 bagian air) untuk mengurangi risiko kontaminasi.</string>
    <string name="tomato_mosaic_virus_treatment8">Hindari bekerja di kebun saat kondisi lembab (virus mudah menyebar saat tanaman basah).</string>
    <string name="tomato_mosaic_virus_treatment9">Hindari penggunaan tembakau di sekitar tanaman yang rentan. Rokok dan produk tembakau lainnya dapat terinfeksi dan menyebarkan virus.</string>
    <string name="tomato_mosaic_virus_treatment10">Buang dan hancurkan semua tanaman yang terinfeksi (lihat Pembersihan Taman Musim Gugur). JANGAN membuat kompos.</string>
</resources>